=== 0.5.6 2014-04-29

* Remove company user params from company create call.
* Added reset password method to V2 enterprise user.
* Added company reactivate method to V2.
* Fixed enterprise user create method.
* Fixed enterprise user parameter name.
* Adjusted V2 base parsing code to allow for parsing a different model in the returned json.
* Added Enterprise Locations call to the V2 enterprise model.

=== 0.5.5 2014-04-15

* Added the Company Settings update method for V2.
* Updated the Smart Invite Settings updated method to not require an id.
* Updated the requires in lobbyist.rb to include newest additions.
* Added Company Settings and Smart Invite Settings proxy models for V2.
* Added Category list method.
* Integrated V2 Category model with Company.
* Added V2 Category proxy model.
* Added update call to Customer V2 proxy model.

=== 0.5.4 2014-04-02

* Added metrics call to enterprises V2 API.
* Removed old_invite_id from email_invitations.
* Added customer proxy model for the V2 API.
* Removed date_added from adminUser.

=== 0.5.3 2014-03-19

* added destroy method to V2::scotty_setting proxy model
* add list call to V2::data_upload, direst_connect_summary to V2::companies, add new proxy model Summary
* removed the customer_query, transaction_query from scotty_setting model
* removed date_added from Contact

=== 0.5.2 2014-03-06

* Added link_established attribute to scotty_setting proxy model
* Added data_uploads proxy model.
* Added source to company transactions.
* Added wants_member_calls attribute to enterprise setting.

=== 0.5.1 2014-02-19

* Added system_of_record to company.

=== 0.5.0 2014-02-06

* Added API V2 support.
* Added attr_accessor attributes back to V1 models.
* Added wants_sms, wants_calls, wants_direct_mail to contact proxy model.
* Added attr_accessor calls back into the contact proxy model.
* Added the scheduled payment proxy model.
* Added skip and unskip methods to the company subscription proxy model.