@@ -79,9 +79,12 @@ require 'lobbyist/v2/company'
 require 'lobbyist/v2/contact'
 require 'lobbyist/v2/customer'
 require 'lobbyist/v2/data_upload'
+require 'lobbyist/v2/email_invitation'
 require 'lobbyist/v2/enterprise_setting'
 require 'lobbyist/v2/enterprise_user'
 require 'lobbyist/v2/enterprise'
+require 'lobbyist/v2/private_feedback_topic'
+require 'lobbyist/v2/review_topic'
 require 'lobbyist/v2/scotty_setting'
 require 'lobbyist/v2/smart_invite_setting'
 require 'lobbyist/v2/summary'
