@@ -1,3 +1,5 @@
+* Added EmailInvitation proxy model for V2 API.
+
 === 0.5.6 2014-04-29
 
 * Remove company user params from company create call.
